--- a/HiemMauNhanDao/HiemMauNhanDao/HienMauNhanDao.csproj
+++ b/HiemMauNhanDao/HiemMauNhanDao/HienMauNhanDao.csproj
@@ -191,6 +191,8 @@
     <Content Include="Assets\Admin\images\logo.png" />
     <Content Include="Assets\Admin\images\logo2.png" />
     <Content Include="Assets\Admin\images\logo3.png" />
+    <Content Include="Assets\Admin\scripts\duyetBaiDang.js" />
+    <Content Include="Assets\Admin\scripts\duyetPDKHM.js" />
     <Content Include="Assets\Admin\scripts\duyetNVYT.js" />
     <Content Include="Assets\Admin\scripts\duyetDVLK.js" />
     <Content Include="Assets\Admin\scripts\main.js" />
@@ -452,6 +454,9 @@
     <Content Include="Areas\Admin\Views\DonViLK\Details.cshtml" />
     <Content Include="Areas\Admin\Views\DonViLK\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\DonViLK\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\BaiDang\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\BaiDang\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\BaiDang\Edit.cshtml" />
     <None Include="Scripts\jquery-1.8.0.intellisense.js" />
     <Content Include="Scripts\jquery-1.8.0.js" />
     <Content Include="Scripts\jquery-1.8.0.min.js" />
@@ -470,6 +475,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
+    <Compile Include="Areas\Admin\Controllers\BaiDangController.cs" />
     <Compile Include="Areas\Admin\Controllers\BaseController3.cs" />
     <Compile Include="Areas\Admin\Controllers\BaseController2.cs" />
     <Compile Include="Areas\Admin\Controllers\BaseController.cs" />
@@ -580,6 +586,13 @@
     <Content Include="Views\MaQR\Index.cshtml" />
     <Content Include="Views\MaQR\ViewFile.cshtml" />
     <Content Include="Views\chiTietDHM\Create2.cshtml" />
+    <Content Include="Views\DotToChucHM\Index2.cshtml" />
+    <Content Include="Views\KetQuaHienMau\DanhSachKQ.cshtml" />
+    <Content Include="Views\KetQuaHienMau\layMau.cshtml" />
+    <Content Include="Views\KetQuaHienMau\Details.cshtml" />
+    <Content Include="Views\NguoiDung\Details.cshtml" />
+    <Content Include="Views\DVLK\DanhSachDangKy.cshtml" />
+    <Content Include="Views\KetQuaHienMau\Error.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
