--- a/HiemMauNhanDao/HiemMauNhanDao/HienMauNhanDao.csproj
+++ b/HiemMauNhanDao/HiemMauNhanDao/HienMauNhanDao.csproj
@@ -595,6 +595,7 @@
     <Content Include="Views\DVLK\DanhSachDangKy.cshtml" />
     <Content Include="Views\KetQuaHienMau\Error.cshtml" />
     <Content Include="Views\DotToChucHM\TaoNV.cshtml" />
+    <Content Include="Views\DVLK\CreateDV.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
